components/Hero/Hero.module.css
#intro {
  margin: 0 auto;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--color-neutral-dark);
  height: 100vh;
}

.intro-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  max-width: 40rem;
}

.intro-greeting {
  font-size: var(--fs-hd-lg);
}

.intro-name {
  font-size: var(--fs-hd-xxl);
}

.intro-title {
  font-size: var(--fs-hd-xl);
}

.button-row {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

@media screen and (max-width: 768px) {
  .intro-greeting {
    font-size: var(--fs-hd-rg);
  }
  .intro-name {
    font-size: var(--fs-hd-xl);
  }
  .intro-title {
    font-size: var(--fs-hd-lg);
  }
}

